<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center_horizontal"
                    android:text="Profile Setup"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/icon_calender"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@drawable/calender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"

                    />


                <ImageView
                    android:id="@+id/icon_work_card"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@drawable/work_enabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <ImageView
                    android:id="@+id/icon_number_card"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/name_card_enablked"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <View
                    android:id="@+id/view_seprateor1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/view_seprateor2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <View
                    android:id="@+id/view_seprateor2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/view_seprateor3"
                    app:layout_constraintStart_toEndOf="@+id/view_seprateor1"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <View
                    android:id="@+id/view_seprateor3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/view_seprateor2"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


                <TextView
                    android:id="@+id/tvlabelcalender"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/circle_bg"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_horizontal"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/icon_calender"
                    app:layout_constraintTop_toBottomOf="@+id/icon_calender" />

                <TextView
                    android:id="@+id/tvlabelwork"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/circle_bg"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_horizontal"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/icon_work_card"
                    app:layout_constraintTop_toBottomOf="@id/icon_work_card"

                    />

                <TextView
                    android:id="@+id/tvlabelcard"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/circle_bg"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_horizontal"
                    android:text="3"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/icon_number_card"
                    app:layout_constraintTop_toBottomOf="@id/icon_number_card" />


                <TextView
                    android:id="@+id/tvtitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/profile3_title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/view_seprateor1" />

                <TextView
                    android:id="@+id/tvTitleDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_horizontal"
                    android:text="@string/profile3_details"
                    android:textColor="@color/grayAppTextColor"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvtitle2" />


                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_96sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:src="@drawable/camera"
                    app:layout_constraintStart_toStartOf="@+id/tvTitleDetails"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleDetails">

                </ImageView>

                <TextView
                    android:id="@+id/tv_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/your_title"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_profile" />

                <EditText
                    android:id="@+id/et_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/gray_button_round"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/bussiness_ownner"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/your_service_area"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_forget_password" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/gray_button_round"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/et_service_message"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="6"
                    android:paddingStart="@dimen/_5sdp"
                    android:scrollbars="vertical"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_number"
                    android:autofillHints="NewYork" />
                
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/check_price_bg_black"
            android:text="Finish"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvskip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_horizontal"
            android:justificationMode="none"
            android:text="Skip for now"
            android:textColor="@color/greyTextColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNext" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
