<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center_horizontal"
                    android:text="@string/profile_setup"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/icon_calender"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@drawable/calender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"

                    />


                <ImageView
                    android:id="@+id/icon_work_card"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@drawable/work_enabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <ImageView
                    android:id="@+id/icon_number_card"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@drawable/shape"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <View
                    android:id="@+id/view_seprateor1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/view_seprateor2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <View
                    android:id="@+id/view_seprateor2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/view_seprateor3"
                    app:layout_constraintStart_toEndOf="@+id/view_seprateor1"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <View
                    android:id="@+id/view_seprateor3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@color/hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/view_seprateor2"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


                <TextView
                    android:id="@+id/tvlabelcalender"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/circle_bg"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_horizontal"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/icon_calender"
                    app:layout_constraintTop_toBottomOf="@+id/icon_calender" />

                <TextView
                    android:id="@+id/tvlabelwork"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/circle_bg"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_horizontal"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/icon_work_card"
                    app:layout_constraintTop_toBottomOf="@id/icon_work_card"

                    />

                <TextView
                    android:id="@+id/tvlabelcard"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/circle_bg_gray"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_horizontal"
                    android:text="3"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/icon_number_card"
                    app:layout_constraintTop_toBottomOf="@id/icon_number_card" />


                <TextView
                    android:id="@+id/tvtitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginHorizontal="24sp"
                    android:gravity="center_horizontal"
                    android:text="@string/profile2_title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/view_seprateor1" />

                <TextView
                    android:id="@+id/tvTitleDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24sp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_horizontal"
                    android:text="@string/profile2_title_details"
                    android:textColor="@color/grayAppTextColor"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvtitle2" />

                <!--
                            <Spinner
                                android:id="@+id/spinner1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/btn_dropdown"
                                android:tooltipText="Jnaunay"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tvtitledetails"
                                android:spinnerMode="dropdown"/>-->

                <TextView
                    android:id="@+id/tv_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Your Profession"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleDetails" />

                <EditText
                    android:id="@+id/et_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/gray_button_round"
                    android:fontFamily="@font/montserrat"
                    android:hint="computer Science"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Your Service Area"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_forget_password" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/gray_button_round"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/los_angeles"
                    android:inputType="number"
                    android:maxLength="16"
                    android:paddingStart="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24sp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/check_price_bg_black"
            android:text="Next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
